chore(ci): run tests in Node.js 0.10 and 0.12

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "scripts": {
     "pretest": "npm run lint",
     "test": "nyc mocha",
+    "test:unit": "mocha",
     "lint": "eslint ."
   }
 }
