--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,17 @@ language: node_js
 
 matrix:
   include:
-    - node_js: "4"
-    - node_js: "6"
+    - node_js: "0.10"
+      script:
+        - npm run test:unit
+    - node_js: "0.12"
+      script:
+        - npm run test:unit
+    - node_js: 4
+    - node_js: 6
+      env: COVERALLS=1
+
+after_success:
+  - if [ "x$COVERALLS" = "x1" ] && npm i coveralls; then
+      nyc report --reporter=text-lcov | coveralls;
+    fi
