--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "es6-promisify": "5.0.0",
-    "node-eval": "1.1.0"
+    "node-eval": "1.1.0",
+    "stripbom": "3.0.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
