--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
   "scripts": {
     "pretest": "npm run lint",
     "test": "npm run cover && npm run examples",
-    "test:unit": "mocha test/**/*.test.js",
-    "cover": "nyc mocha test/**/*.test.js",
+    "test:unit": "mocha test/**{,/*}.test.js",
+    "cover": "nyc mocha test/**{,/*}.test.js",
     "lint": "eslint .",
     "examples": "node examples/index.js"
   }
