--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   "dependencies": {
     "es6-promisify": "5.0.0",
     "json5": "0.5.1",
-    "node-eval": "1.1.0",
-    "stripbom": "3.0.0"
+    "node-eval": "1.1.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
