--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint": "^4.4.1",
     "eslint-config-pedant": "^0.10.0",
     "mocha": "^3.5.0",
-    "nyc": "^10.0.0",
+    "nyc": "10.3.2",
     "proxyquire": "^1.8.0",
     "sinon": "^3.2.0",
     "sinon-chai": "^2.12.0"
