--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,9 @@ language: node_js
 
 matrix:
   include:
-    - node_js: "0.12"
-      script:
-        - npm run test:unit
     - node_js: 4
     - node_js: 6
+    - node_js: 8
       env: COVERALLS=1
 
 after_success:
