--- a/package.json
+++ b/package.json
@@ -28,20 +28,20 @@
     "node-eval": "1.1.1"
   },
   "devDependencies": {
-    "chai": "^4.1.1",
-    "eslint": "^4.4.1",
+    "chai": "^4.1.2",
+    "eslint": "^4.11.0",
     "eslint-config-pedant": "^1.0.0",
-    "mocha": "^3.5.0",
-    "nyc": "11.3.0",
+    "mocha": "^4.0.1",
+    "nyc": "^11.3.0",
     "proxyquire": "^1.8.0",
-    "sinon": "4.0.1",
+    "sinon": "^4.1.2",
     "sinon-chai": "^2.14.0"
   },
   "scripts": {
     "pretest": "npm run lint",
     "test": "npm run cover && npm run examples",
     "test:unit": "mocha test/**{,/*}.test.js",
-    "cover": "nyc mocha test/**{,/*}.test.js",
+    "cover": "nyc npm run test:unit",
     "lint": "eslint .",
     "examples": "node examples/index.js"
   }
